[package]
name = "tipsy"
version = "0.3.0"
rust-version = "1.75.0"
edition = "2021"
authors = ["Austin Schey <aschey13@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/aschey/tipsy"
homepage = "https://github.com/aschey/tipsy"
keywords = ["tokio", "ipc"]
categories = ["asynchronous", "network-programming"]
description = "Cross-platform IPC for Tokio"
include = ["/src", "/examples", "/tests"]

[dependencies]
futures = "0.3"
tokio = { version = "1.23.1", features = ["net", "time"] }
tracing = "0.1.36"

[target.'cfg(unix)'.dependencies]
libc = "0.2.65"
dirs = "5"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_SystemServices",
    "Win32_Storage_FileSystem",
    "Win32_Security_Authorization",
    "Win32_System_Memory",
] }

[dev-dependencies]
tokio = { version = "1.37.0", features = [
    "io-util",
    "rt-multi-thread",
    "time",
    "macros",
] }
rand = "0.8.5"

[[example]]
name = "client"
doc-scrape-examples = true

[[example]]
name = "server"
doc-scrape-examples = true
